Adding seo robots.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       name="keywords"
       content="e-commerce, home design, furniture, Tulfa"
     />
+    <meta property="og:title" content="Tulfa - Home Design & Furniture" />
+    <meta property="og:description" content="E-Commerce Website for Tulfa" />
     <title>Vite + React</title>
   </head>
   <body>
